# Engine25

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  main.cpp
Core/: Application.cpp  Application.h  ApplicationContext.h  BackendDescriptor.h  CMakeLists.txt  ClearFlags.h  ClearPass.cpp  ClearPass.h  ConfigFile.h  CoreUtils.h  CudaUtils.h  Engine.cpp  Engine.h  Events.h  Exceptions.h  FrameContext.h  ICommandList.h  IDevice.h  IModule.h  IRenderPass.h  IRenderer.cpp  IRenderer.h  IRendererResources.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Macros.h  MeshRenderPass.cpp  MeshRenderPass.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  OpenGLCommandList.h  OpenGLDevice.h  OpenglRenderer.cpp  OpenglRenderer.h  Platform.cpp  Platform.h  (+8 more)
Core/ECS/: ComponentHandle.h  ComponentPool.h
Core/Events/: EngineEvents.h
Core/Frameworks/: CMakeLists.txt  Cache.h  Command.h  CommandDoubleBuffer.cpp  CommandDoubleBuffer.h  ConfigFile.cpp  ConfigFile.h  CudaUtils.cpp  CudaUtils.h  Dag.h  Graph.h  JobSystem.cpp  JobSystem.h  Keyboard.cpp  Keyboard.h  Logger.cpp  Logger.h  LoggingMacros.h  MainLoop.cpp  MainLoop.h  Math.h  MeshFaceNormals.h  Mouse.h  Pool.h  PoolHandle.h  Properties.h  PropertiesHandle.h  TaskGraph.cpp  TaskGraph.h
Core/Frameworks/Geometry/: AABB.h  AABBUtils.h  AssetIo.h  CMakeLists.txt  GeometricProperties.h  Graph.cpp  Graph.h  GraphAStar.cpp  GraphAStar.h  GraphBellmanFord.cpp  GraphBellmanFord.h  GraphConnectedComponents.cpp  GraphConnectedComponents.h  GraphDijkstra.cpp  GraphDijkstra.h  GraphFloydWarshall.cpp  GraphFloydWarshall.h  GraphKruskal.cpp  GraphKruskal.h  GraphPrim.cpp  GraphPrim.h  GraphUtils.cpp  GraphUtils.h  Hierarchy.h  Mesh.cpp  Mesh.h  MeshFeatures.cpp  MeshFeatures.h  MeshIo.cpp  MeshIo.h  MeshShapes.cpp  MeshShapes.h  MeshSubdivision.cpp  MeshSubdivision.h  MeshUtils.cpp  MeshUtils.h  PointCloud.cpp  PointCloud.h  PointCloudUtils.h  Sphere.h  (+13 more)
Core/Frameworks/Graphics/: CMakeLists.txt  Camera.h  GlfwWindow.h  GraphicsApi.h  GraphicsApi2.h  GraphicsTypes.h  IBuffer.h  ICommandBuffer.h  IDescriptorSet.h  IDevice.h  IFramebuffer.h  IPipeline.h  IQueryObject.h  IRenderPass.h  IShader.h  IStateObjects.h  ISwapchain.h  ISynchronization.h  ITexture.h  RenderGraph.h  RenderPassData.h  ResourceManager.h
Core/Frameworks/Graphics/Gui/: CMakeLists.txt  GuiAABB.cpp  GuiAABB.h  GuiGraph.cpp  GuiGraph.h  GuiMesh.cpp  GuiMesh.h  GuiPointCloud.cpp  GuiPointCloud.h  GuiPropertyContainer.cpp  GuiPropertyContainer.h  GuiSphere.cpp  GuiSphere.h  GuiVector.cpp  GuiVector.h
Core/Frameworks/Graphics/OpenGL/: OpenGLBackend.cpp  OpenGLBackend.h  OpenGLGRaphicsApi.cpp  OpenGLGraphicsApi.cpp  OpenGLGraphicsApi.h
Core/Graphics/: GraphicsApi.h
Core/Modules/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  InputModule.cpp  InputModule.h  Logger.h  MainLoop.h  MeshAssetModule.cpp  MeshAssetModule.h  Module.cpp  Module.h  TaskModule.cpp  TaskModule.h
Core/Modules/Graphics/: CMakeLists.txt  GLFWModule.cpp  GLFWModule.h  GuiModule.cpp  GuiModule.h  RenderingModule.cpp  RenderingModule.h  SceneModule.cpp  SceneModule.h  SlangShaderModule.cpp  SlangShaderModule.h  WindowComponent.h
Test/: CMakeLists.txt  TestAABB.cpp  TestGraph.cpp  TestGraph.h  TestGraphUtils.cpp  TestMesh.cpp  TestMeshIo.cpp  TestPointCloud.cpp  TestSphere.cpp  TestTree.cpp  TestVoxelGrid.cpp  TestVoxelGridDownsampling.cpp
